fixes to visibility

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 3px 3px;
+    background-color: rgba(240, 248, 255, 0.356);
     text-shadow: 1px 1px;
     border-radius: 20px;
     animation: slideUp 0.75s linear 0.2s forwards;
